# rajiniPP

./: .black  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LANG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-Bug-Report.md  2-Feature-Request.md  3-Support-Request.md
.github/workflows/: release.yml  test.yml
examples/: fizzbuzz.rpp  for_loop.rpp  function_return.rpp  functions_no_args.rpp  hello_world.rpp  if_conditional.rpp  if_else_conditional.rpp  logical_ops.rpp  math_ops.rpp  multi_print.rpp  while_loop.rpp
rajinipp/: __init__.py  __main__.py  __rajiniworld__.py  api.py  ast_nodes.py  execptions.py  lexer.py  parser.py  runner.py  token.yml  utils.py
rajinipp/ast/: __init__.py  base.py  blocks.py  control.py  ops.py
rajinipp/parser/: __init__.py  atom_parser.py  cond_parser.py  expr_parser.py  flow_parser.py  func_parser.py  ops_parser.py  parser.py  print_parser.py  stmt_parser.py  var_parser.py
tests/: __init__.py  conftest.py  test_exprs.py  test_flow_control.py  test_functions.py  test_print.py  test_runner.py
